change order, improve checkbox

--- a/interval.html
+++ b/interval.html
@@ -199,6 +199,29 @@ K:C
 <p>完全8度以内の音程を<dfn>単音程</dfn>、増8度以上の音程を<dfn>複音程</dfn>と呼ぶ。</p>
 </aside>
 
+<h2>異名同音的音程</h2>
+
+<p>ある音程の構成音を異名同音に変更して得られる音程を元の音程の<dfn>異名同音的音程</dfn>と呼ぶ。</p>
+
+<aside>
+<p>例</p>
+<div class="score">
+L:1
+K:C
+[^F^^A]||[^FB]
+</div>
+<p>増3度（左）と完全4度（右）は異名同音的音程である。</p>
+</aside>
+
+<aside>
+<p>例</p>
+<div class="score">
+L:1
+K:C
+[_G^B]||[^F^B]||[^Fc]||[^F__d]
+</div>
+<p>左から、重増3度、増4度、減5度、重減6度。すべて異名同音的音程である。</p>
+</aside>
 
 <h2>転回音程</h2>
 
@@ -254,8 +277,7 @@ CDEFGABcdef
 <p>全音階的音程でない単音程をすべて<dfn>半音階的音程</dfn>と呼ぶ。</p>
 
 <aside>
-<p>ハ長調に限らずト長調でも変ロ長調でも嬰ヘ長調でも、<br>
-長調の音階を構成する音どうしの音程はすべて全音階的音程である。</p>
+<p>何長調であっても、長調の音階を構成する2つの音の音程はすべて全音階的音程である。</p>
 <p>また逆に、ある2音の音程が全音階的音程であれば、その2音を構成音とするような長調が存在する。</p>
 <p>例</p>
 <div class="score">
@@ -267,24 +289,24 @@ K:C
 短6度は全音階的音程なので、この2音を構成音（音階固有音）とする長調が存在する。<br>
 しかもその長調は「レには♭がつくがファにはつかない」長調だとわかる。<br>
 その条件を満たす長調は次の3つであり、確かに3つともファ・レ♭の2音が入っている。</p>
+<p>変イ長調 As dur</p>
 <div class="score">
 L:1
 K:Ab
 A,B,CDEFGA
 </div>
-<p>変イ長調 As dur</p>
+<p>変ニ長調 Des dur</p>
 <div class="score">
 L:1
 K:Db
 DEFGABcd
 </div>
-<p>変ニ長調 Des dur</p>
+<p>変ト長調 Ges dur</p>
 <div class="score">
 L:1
 K:Gb
 G,A,B,CDEFG
 </div>
-<p>変ト長調 Ges dur</p>
 </aside>
 
 <aside>
@@ -307,10 +329,12 @@ K:C
 <li>変ロ長調 B dur
 <li>変ホ長調 Es dur
 </ul>
+<div class="scroll">
 <div class="score">
 L:1
 K:D
 ||[K:G]||[K:C]||[K:F]||[K:Bb]||[K:Eb][Gd]
+</div>
 </div>
 
 <li>短2度は全音階的音程なので、条件を満たす長調は存在する。<br>
@@ -319,10 +343,12 @@ K:D
 <li>ト長調 G dur
 <li>ハ長調 C dur
 </ul>
+<div class="scroll">
 <div class="score">
 L:1
 K:G
 ||[K:C][Bc]
+</div>
 </div>
 
 <li>短9度（＝ 1 oct. と短2度）は全音階的音程なので、条件を満たす長調は存在する。<br>
@@ -331,11 +357,14 @@ K:G
 <li>ニ長調 D dur
 <li>イ長調 A dur
 </ul>
+<div class="scroll">
 <div class="score">
 L:1
 K:D
 ||[K:A][Cd]
 </div>
+</div>
+
 <li>減7度は全音階的音程ではないので、条件を満たす長調は存在しない。
 
 </ol>
@@ -377,30 +406,6 @@ K:C
 
 <h3>不協和音程</h3>
 <p>協和音程でない音程、すなわち長／短2,7度とその他すべての増／減／重増／重減音程を<dfn>不協和音程</dfn>と呼ぶ。</p>
-
-<h2>異名同音的音程</h2>
-
-<p>ある音程の構成音を異名同音に変更して得られる音程を元の音程の<dfn>異名同音的音程</dfn>と呼ぶ。</p>
-
-<aside>
-<p>例</p>
-<div class="score">
-L:1
-K:C
-[^F^^A]||[^FB]
-</div>
-<p>増3度（左）と完全4度（右）は異名同音的音程である。</p>
-</aside>
-
-<aside>
-<p>例</p>
-<div class="score">
-L:1
-K:C
-[_G^B]||[^F^B]||[^Fc]||[^F__d]
-</div>
-<p>左から、重増3度、増4度、減5度、重減6度。すべて異名同音的音程である。</p>
-</aside>
 
 <aside>
 <p>練習：次のうち、異名同音を考えると協和音程となるものをすべて答えよ。</p>
