転回形の和音記号に関する記述を追加

--- a/chord.html
+++ b/chord.html
@@ -419,7 +419,6 @@ sub[data-sup]:before {
 
 <aside>
 <p>転回指数による表記と伝統的表記の比較を示す。</p>
-<p>日本国内では転回指数による表記が一般的だが、海外では伝統的表記が主流である。</p>
 <style>
 table.inversion_symbol td {
  text-align: center;
@@ -514,7 +513,10 @@ K:C
 <td>V<sub>2</sub>
 </table>
 </div>
+</aside>
 
+<aside>
+<p>指数表記は藝大方式とも呼ばれ、1960年代以降急速に日本で普及したらしい。藝大方式は日本では最も一般的に用いられる表記となったが、海外では伝統的表記が主流である。</p>
 </aside>
 
 <aside>
