--- a/interval.html
+++ b/interval.html
@@ -8,8 +8,8 @@
 
 <nav id="header">
 <ul>
-<li>音楽理論ノート
-<li>音程
+<li><a href=".">音楽理論ノート</a>
+<li><a hfef="">音程</a>
 </ul>
 </nav>
 
@@ -26,7 +26,7 @@
 度数の数えかた、結合辞のつけかたには規則がある。</p>
 
 
-<h3>(0) 度数</h3>
+<h3>度数</h3>
 <p>音程を数える単位を<dfn>度数</dfn>と呼ぶ。</p>
 <p>同音の音程を1度と呼び、以下隔たりの広さにより2度、3度、…と呼ぶ。</p>
 <p>変化記号（♯や♭など。調号と臨時記号）は度数に影響しない。</p>
@@ -52,7 +52,7 @@ K:C
 </aside>
 
 
-<h3>(1) 幹音だけからなる音程</h3>
+<h3>幹音の音程</h3>
 
 <aside>
 <p>補足（幹音）</p>
@@ -147,7 +147,7 @@ K:C
 </div>
 </aside>
 
-<h3>(2) 派生音を含む音程</h3>
+<h3>派生音を含む音程</h3>
 <p>変化記号を除いた音程を基準として、変化記号による音程の変化を次の通り名称に反映する。</p>
 <p>1,4,5,8度：狭く ← <b>重減</b> - <b>減</b> - <b>完全</b> - <b>増</b> - <b>重増</b> → 広く</p>
 <p>2,3,6,7度：狭く ← <b>重減</b> - <b>減</b> - <b>短</b> - <b>長</b> - <b>増</b> - <b>重増</b> → 広く</p>
@@ -181,9 +181,12 @@ K:A
 </div>
 </aside>
 
-<h3>(3) 8度より広い音程</h3>
+<h3>複音程</h3>
 
-<p>音程が8度より広い場合、8度以内になるまで上下どちらかの音を 1 octave 単位で移動し、移動後の音程と移動した octave 数を用いて「○ oct. と○○度」と呼ぶ。あるいは移動後の音程の結合辞（長、短、増…）を元の度数につけて呼ぶ。</p>
+<p>増8度以上の音程を<dfn>複音程</dfn>と呼ぶ。</p>
+<p>これに対し、完全8度以内の音程を<dfn>単音程</dfn>と呼ぶ。</p>
+<p>　</p>
+<p>複音程の場合、8度以内になるまで上下どちらかの音を 1 octave 単位で移動し、移動後の音程と移動した octave 数を用いて「○ oct. と○○度」と呼ぶ。あるいは移動後の音程の結合辞（長、短、増…）を元の度数につけて呼ぶ。</p>
 
 <aside>
 <p>例</p>
@@ -196,8 +199,6 @@ K:C
 <p>（右）2 oct. と完全5度。あるいは完全19度。</p>
 </aside>
 
-<p>完全8度以内の音程を<dfn>単音程</dfn>、増8度以上の音程を<dfn>複音程</dfn>と呼ぶ。</p>
-</aside>
 
 <h2>異名同音的音程</h2>
 
@@ -261,8 +262,12 @@ table.inversion td:first-child {
 <tr><td>重増<td>⇔<td>重減
 </table>
 
-<h2>全音階的音程と半音階的音程</h2>
-<p>全音階（長音階などの、臨時記号を用いない音階）に現れる単音程を<dfn>全音階的音程</dfn>と呼ぶ。</p>
+<h2>全／半音階的音程</h2>
+<aside>
+<p>音程には2種類ある。ある調の中で自然に現れる音程と、臨時記号を使わなければ現れない変化した音程である。前者を全音階的音程、後者を半音階的音程と呼んで区別する。</p>
+</aside>
+<h3>全音階的音程</h3>
+<p>全音階（長音階などの、臨時記号を用いない音階）に現れる音程を<dfn>全音階的音程</dfn>と呼ぶ。</p>
 
 <aside>
 <p>全音階の例</p>
@@ -273,8 +278,7 @@ CDEFGABcdef
 </div>
 </aside>
 
-<p>全音階的音程は完全1,4,5,8度、長／短2,3,6,7度、増4度、減5度の全14種である。</p>
-<p>全音階的音程でない単音程をすべて<dfn>半音階的音程</dfn>と呼ぶ。</p>
+<p>単音程のうち、全音階的音程は完全1,4,5,8度、長／短2,3,6,7度、増4度、減5度の全14種である。</p>
 
 <aside>
 <p>何長調であっても、長調の音階を構成する2つの音の音程はすべて全音階的音程である。</p>
@@ -308,6 +312,9 @@ K:Gb
 G,A,B,CDEFG
 </div>
 </aside>
+
+<h3>半音階的音程</h3>
+<p>全音階的音程でない音程をすべて<dfn>半音階的音程</dfn>と呼ぶ。</p>
 
 <aside>
 <p>練習：次の2音を構成音（音階固有音）とする長調を答えよ。ない場合は「なし」と答えよ。</p>
@@ -371,7 +378,7 @@ K:D
 </div>
 </aside>
 
-<h2>協和音程と不協和音程</h2>
+<h2>協和／不協和音程</h2>
 <p>協和の度合いにより、音程は協和音程と不協和音程とに分類される。</p>
 
 <h3>協和音程</h3>
@@ -434,11 +441,6 @@ K:C
 
 
 <script>
-var scoreObj = document.getElementsByClassName("score");
-if (scoreObj) {
- for( var i in scoreObj ){
-  ABCJS.renderAbc( scoreObj[i], scoreObj[i].innerHTML,{staffwidth:300} );
- }
-}
+renderabc();
+maketoc();
 </script>
-<script>maketoc()</script>
