和声の推敲

--- a/harmony.html
+++ b/harmony.html
@@ -152,7 +152,7 @@ w: C:~II IV VI
 </ul>
 
 <p>この3通りの進行を<dfn>カデンツ</dfn>と呼ぶ。</p>
-<p>楽曲をトニカで区切っていくと、1つ1つの小さな単位は3つのカデンツのどれかになっている。したがってカデンツは曲の進行の最小構成単位である。</p>
+<p>楽曲をトニカで区切っていくと、1つ1つの小さな単位は3つのカデンツのどれかになっている。つまりカデンツは曲の進行の最小構成単位であると言える。</p>
 
 <aside>
 <p>楽曲がトニカから始まらない場合や、トニカに戻らないまま転調する場合には、その部分に不完全なカデンツが生ずる。</p>
@@ -284,9 +284,9 @@ y C,
 L:1
 K:C
 V:1
- y y ||  y y || "A."G, d || "S."C a
+y y || y y || "A."G, d || "S."C a ||
 V:2 bass
-"B."F,, D || "T."C, A || y y  || y y
+"B."F,, D || "T."C, A || y y || y y ||
 </div>
 
 <aside>
@@ -475,16 +475,16 @@ G, C ||
 <h3>重複と省略</h3>
 <p>音が重複する場合、原則として根音を重複させる。次いで第5音が良い。</p>
 <p>その他の音の重複は避けられる。特に導音の重複は禁じられている。</p>
-<p>ただし第1転回形の場合はむしろ最低音である第3音を重複させる方が良いことが多い。</p>
+<p>ただし第1転回形の場合は、むしろ最低音である第3音を重複させる方が良いことが多い。</p>
 <p>音を省略する場合は、第5音を省略する。</p>
 
 <h3>限定進行</h3>
 <p>上記の禁則に加え、和音中の特定の音の進行に関する制約がある。一般的なものを以下に挙げる。</p>
 <ul>
-<li>V の導音は必ず上行して主音に達する
-<li>V の iv 音は必ず下降して iii 音に達する（下行導音）
-<li>属七を除く第7音や第9音は前の和音からの保留でなければならない
-<li>第7音や第9音は必ず保留または2度下げて次の和音に進行しなければならない
+<li>V の導音は2度上の主音に進む。
+<li>V のiv音は2度下のiii音に進む。（下行導音）
+<li>第7,9音は前の和音から保留する。（ただし属七は許される）
+<li>第7,9音は保留または2度下げて後続和音に進行する。
 </ul>
 
 <h2>一般的な技法</h2>
