--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <li><a href="tuning.html">音律</a>
 <li><a href="chord.html">和音</a>
 <li><a href="harmony.html">和声</a>
+<li><a href="nonchord_tone.html">非和声音</a>
 </ol>
 </nav>
 
