--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <nav>
 <ol>
 <li><a href="interval.html">音程</a>
+<li><a href="scale.html">音階</a>
 <li><a href="tuning.html">音律</a>
 <li><a href="chord.html">和音</a>
 <li><a href="harmony.html">和声</a>
