--- a/chord.html
+++ b/chord.html
@@ -55,7 +55,7 @@ K:C
 <ul>
 <li>ド（C）を根音とする長三和音： C = C△
 <li>ド（C）を根音とする短三和音： Cm = C-
-<li>ド（C）を根音とする増三和音： C(#5) = Caug = C+
+<li>ド（C）を根音とする増三和音： C(♯5) = Caug = C+
 <li>ド（C）を根音とする減三和音： Cm(♭5) = Cdim = C○
 </ul>
 </aside>
@@ -256,7 +256,7 @@ K:C
 <li>ドを根音とする短三和音（基本形）
 <li>レを根音とする増三和音（基本形）
 <li>シを根音とする減三和音（第1転回形）
-<li>ファ＃を根音とする減七の和音（基本形）
+<li>ファ♯を根音とする減七の和音（基本形）
 <br>また、異名同音により以下も正解となる。
 <ul>
 <li>ラを根音とする減七の和音（第3転回形）
@@ -302,15 +302,15 @@ K:F
 <p>主音の5度上の音を<b>属音</b>、5度下の音を<b>下属音</b>と呼ぶ。</p>
 <p>主音の半音下の音を<b>導音</b>と呼ぶ。</p>
 <p>（例）ハ長調では、主音はド、属音はソ、下属音はファ、導音はシ。</p>
-<p>（例）ト長調では、主音はソ、属音はレ、下属音はド、導音はファ＃。</p>
-<p>（例）ニ短調では、主音はレ、属音はラ、下属音はソ、導音はド＃。</p>
+<p>（例）ト長調では、主音はソ、属音はレ、下属音はド、導音はファ♯。</p>
+<p>（例）ニ短調では、主音はレ、属音はラ、下属音はソ、導音はド♯。</p>
 </aside>
 
 <p>ある調において主音を根音とする三和音を I と呼び、以下同様に II, III, ...と呼ぶ。</p>
 <aside>
 <p>ハ長調での I 〜 VII</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [CEG] [DFA] [EGB] [FAc] [GBd] [Ace] [Bdf]
@@ -318,7 +318,7 @@ w: C:~I II III IV V VI VII
 </div>
 <p>ト長調での I 〜 VII</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:G
 [GBd] [Ace] [Bdf] [ceg] [dfa] [egb] [fac']
@@ -326,7 +326,7 @@ w: G:~I II III IV V VI VII
 </div>
 <p>ニ短調での I 〜 VII。和声短音階であり、ソに♯がついている。<br>短調の和音・和声は和声短音階で考える。</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:Dm
 [DFA] [EGB] [FA^c] [GBd] [A^ce] [Bdf] [^ceg]
@@ -340,7 +340,7 @@ w: d:~I II III IV V VI VII
 <aside>
 <p>ハ長調での主要三和音 I, IV, V</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [CEG] [FAc] [GBd]
@@ -349,7 +349,7 @@ w: C:~I IV V
 
 <p>ト長調での主要三和音 I, IV, V</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:G
 [GBd] [ceg] [dfa]
@@ -358,7 +358,7 @@ w: G:~I IV V
 
 <p>ニ短調での主要三和音 I, IV, V</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:F
 [DFA] [GBd] [A^ce]
@@ -373,7 +373,7 @@ w: d:~I IV V
 <aside>
 <p>ハ長調での七の和音 I<sub>7</sub> 〜 VII<sub>7</sub> と、九の和音 I<sub>9</sub> 〜 VII<sub>9</sub></p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [CEGB] [DFAc] [EGBd] [FAce] [GBdf] [Aceg] [Bdfa]
