#記号修正、Helvetica → Verdana 変更

--- a/harmony.html
+++ b/harmony.html
@@ -24,7 +24,7 @@
 <p>調の主音を基準として、次の記号で和音を表す。</p>
 <p>例1) ハ長調 C dur</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [CEG] [DFA] [EGB] [FAc] [GBd] [Ace] [Bdf]
@@ -32,7 +32,7 @@ w: C:~I II III IV V VI VII
 </div>
 <p>例2) ニ短調 d moll</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:Dm
 [DFA] [EGB] [FA^c] [BGd] [A^ce] [Bdf] [^ceg]
@@ -52,7 +52,7 @@ w: d:~I II III IV V VI VII
 <aside>
 <p>トニカ</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [A,CE] [CEG] [EGB]
@@ -68,7 +68,7 @@ w: C:~VI I III
 <aside>
 <p>ドミナント</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [EGB] [GBd] [Bdf]
@@ -83,7 +83,7 @@ w: C:~III V VII
 <aside>
 <p>サブドミナント</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [DFA] [FAc] [Ace]
