--- a/interval.html
+++ b/interval.html
@@ -39,7 +39,7 @@ K:C
 [CC]||[CG]||[DF]||[^C_G]||[_D^F]
 </div>
 <p>左から、1度、5度、3度、5度、3度。<br>
-#や♭はすべて無視し、単純に楽譜上で音の間隔を数える。<br>
+♯や♭はすべて無視し、単純に楽譜上で音の間隔を数える。<br>
 最後の2例は同音だが度数は異なる。</p>
 </aside>
 
@@ -47,7 +47,7 @@ K:C
 
 <aside>
 <p>全音・半音</p>
-<p>ドとレの間にはド＃の音があるが、ミとファの間には音がない。<br>
+<p>ドとレの間にはド♯の音があるが、ミとファの間には音がない。<br>
 このように、間に1つ音がある2音の間隔を全音、間に音がなく隣り合う2音の間隔を半音と呼ぶ。</p>
 </aside>
 
@@ -160,7 +160,7 @@ K:F
 [C_E]||[C^G]||[_CB]
 </div>
 <p>（左）♭を無視したドとミの音程は長3度。ミに♭をつけると長3度から半音狭くなるので、短3度。</p>
-<p>（中）♯を無視したドとソの音程は完全5度。ソに＃をつけると完全5度から半音広くなるので、増5度。</p>
+<p>（中）♯を無視したドとソの音程は完全5度。ソに♯をつけると完全5度から半音広くなるので、増5度。</p>
 <p>（右）ドとシの音程は長7度。ドに♭がついて半音広がるが、シにも調号の♭がついて半音狭まるので、結局音の間隔は変わらず長7度。</p>
 </aside>
 
@@ -176,8 +176,8 @@ K:A
 <p>(1) 変化記号を取ったドとミの音程は長3度。ドに♯がついて半音狭くなるので、正解は短3度。</p>
 <p>(2) 変化記号を取ったソとレの音程は完全5度。ソに♯がついて半音狭く、レに♭がついてさらに半音狭くなるので、合計半音2つ分狭くなる。正解は重減5度。</p>
 <p>(3) 変化記号を取ったラとシの音程は長2度。ラに♯がついて半音狭くなるので、正解は短2度。</p>
-<p>(4) 変化記号を取ったシとソの音程は短6度。シにもソにも＃がついて間隔は変わらないので、正解は短6度。</p>
-<p>(5) 変化記号を取ったファとミの音程は長7度。ミに＃がついて半音広くなるので、正解は増7度。</p>
+<p>(4) 変化記号を取ったシとソの音程は短6度。シにもソにも♯がついて間隔は変わらないので、正解は短6度。</p>
+<p>(5) 変化記号を取ったファとミの音程は長7度。ミに♯がついて半音広くなるので、正解は増7度。</p>
 </div>
 </aside>
 
@@ -359,7 +359,7 @@ K:G
 </div>
 
 <li>短9度（＝ 1 oct. と短2度）は全音階的音程なので、条件を満たす長調は存在する。<br>
-ドに＃がつくがレには調号がつかない長調は次の2つある。
+ドに♯がつくがレには調号がつかない長調は次の2つある。
 <ul>
 <li>ニ長調 D dur
 <li>イ長調 A dur
