--- a/nonchord_tone.html
+++ b/nonchord_tone.html
@@ -28,7 +28,7 @@
 <p>経過音</p>
 <div class="score">
 %%score {(S A) | (T B)}
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 M:C
@@ -55,7 +55,7 @@ w:C:~I
 <p>刺繡音</p>
 <div class="score">
 %%score {(S A) | (T B)}
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 M:C
@@ -82,7 +82,7 @@ w:C:~I
 <p>先取音</p>
 <div class="score">
 %%score {(S A) | (T B)}
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1/2
 K:C
 M:C
@@ -105,7 +105,7 @@ w:C:~V I
 <p>逸音</p>
 <div class="score">
 %%score {(S A) | (T B)}
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1/2
 K:C
 M:C
@@ -128,7 +128,7 @@ w:C:~V7 I
 <p>掛留音</p>
 <div class="score">
 %%score {(S A) | (T B)}
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1/2
 K:C
 M:C
@@ -155,7 +155,7 @@ w:C:~V7 I
 <p>倚音</p>
 <div class="score">
 %%score {(S A) | (T B)}
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 M:C
@@ -183,7 +183,7 @@ w:C:~I
 <p>保続音</p>
 <div class="score">
 %%score {(S A) | (T B)}
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 M:C
