--- a/scale.html
+++ b/scale.html
@@ -21,33 +21,43 @@
 
 <h2>長音階</h2>
 
-<h3>音階構成音</h3>
-<p>長音階（および短音階）の構成音を下から順に第 i 〜 第 vii 音と呼ぶ。</p>
-<p>i を<dfn>主音</dfn>、i の完全5度上の v を<dfn>属音</dfn>、i の完全5度下の iv を<dfn>下属音</dfn>、i の半音下の vii を<dfn>導音</dfn>と呼ぶ。</p>
-
-<aside>
-<p>ほか、第 ii 音を上主音（主音 i の上の音）、第 iii 音を中音（主音 i と属音 v の中間）、第 vi 音を下中音（下属音と主音の中間）と呼ぶ。</p>
-<p>音階によって vii が i の半音下ではない場合があり、その場合は vii を導音とは呼ばない。自然短音階の項を参照。</p>
-</aside>
-
-
 <h3>自然長音階</h3>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
+L:1
+K:C
+V:1
+C D E F G A B c
+w: └ 全~┴ 全~┴ 半~┴ 全~┴ 全~┴ 全~┴ 半~┘
+</div>
+<p>1 octave を5つの全音と2つの半音で 全-全-半-全-全-全-半 の順に分割した音階を<dfn>自然長音階</dfn>と呼ぶ。</p>
+<p>通常、単に<dfn>長音階</dfn>と言えば自然長音階を指す。</p>
+
+<h3>音階構成音</h3>
+<div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
 C D E F G A B c
 w: C:~i ii iii iv v vi vii i
 </div>
-<p>1 octave を5つの全音と2つの半音で 全-全-半-全-全-全-半 の順に分割した音階を<dfn>自然長音階</dfn>と呼ぶ。</p>
-<p>通常、単に<dfn>長音階</dfn>と言えば自然長音階を指す。</p>
+<p>長音階（および短音階）の構成音を下から順に第 i 〜 第 vii 音と呼ぶ。</p>
+<p>i を<dfn>主音</dfn>、i の完全5度上の v を<dfn>属音</dfn>、i の完全5度下の iv を<dfn>下属音</dfn>、i の半音下の vii を<dfn>導音</dfn>と呼ぶ。</p>
+
+<aside>
+<p>ほか、第 ii 音を上主音（主音 i の上の音）、第 iii 音を中音（主音 i と属音 v の中間）、第 vi 音を下中音（下属音と主音の中間）と呼ぶ。</p>
+</aside>
+<aside>
+<p>長音階でも短音階でも iv ＝下属音、v ＝属音だが、vii は自然短音階では i の半音下にならないため導音とは呼ばれない。自然短音階の項を参照。</p>
+</aside>
+
 <p>きわめて稀ながら、自然長音階の他に以下の長音階が用いられることがある。</p>
 
 <h3>和声長音階</h3>
 <p>vi 音が自然長音階より半音低い音階を<dfn>和声長音階</dfn>（Molldur）と呼ぶ。</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -58,7 +68,7 @@ w: C:~i ii iii iv v vi vii i
 <h3>旋律長音階</h3>
 <p>上行形は自然長音階と同じだが、下行形のみ vii, vi 音が自然長音階より半音低い音階を<dfn>旋律長音階</dfn>と呼ぶ。</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -74,7 +84,7 @@ w: C:~i vii vi v iv iii ii i
 <h3>自然短音階</h3>
 <p>iii, vi, vii 音が自然長音階より半音低い音階を<dfn>自然短音階</dfn>と呼ぶ。</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -93,7 +103,7 @@ w: c:~i ii iii iv v vi vii i
 <h3>和声短音階</h3>
 <p>vii 音が自然短音階より半音高い音階を<dfn>和声短音階</dfn>と呼ぶ。</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -110,7 +120,7 @@ w: c:~i ii iii iv v vi vii i
 <h3>旋律短音階</h3>
 <p>下行形は自然短音階と同じだが、上行形のみ vi, vii 音が自然短音階より半音高い音階を<dfn>旋律短音階</dfn>と呼ぶ。</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -121,7 +131,7 @@ w: c:~i vii vi v iv iii ii i
 </div>
 
 <aside>
-<p>旋律短音階の上行形と自然長音階とは iii によってのみ区別される。</p>
+<p>旋律短音階の上行形は iii 以外自然長音階と同じになる。</p>
 </aside>
 
 <h2>全音階</h2>
@@ -135,7 +145,7 @@ w: c:~i vii vi v iv iii ii i
 <p>中世のグレゴリオ聖歌で用いられた音階と旋律の規定を<dfn>教会旋法</dfn>と呼ぶ。教会旋法を起源とする全音階は以下の7つある。</p>
 <p>アイオニアン Ionian （自然長音階と同じ）</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -144,7 +154,7 @@ w: _ _ └ 半~┘ _ _ └ 半~┘
 </div>
 <p>ドリアン Dorian</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -153,7 +163,7 @@ w: _ └ 半~┘ _ _ └ 半~┘ _
 </div>
 <p>フリジアン Phrygian</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -162,7 +172,7 @@ w: └ 半~┘ _ _ └ 半~┘ _ _
 </div>
 <p>リディアン lydian</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -171,7 +181,7 @@ w: _ _ _ └ 半~┘ _ └ 半~┘
 </div>
 <p>ミクソリディアン Mixolydian</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -180,7 +190,7 @@ w: _ _ └ 半~┘ _ └ 半~┘ _
 </div>
 <p>エオリアン Aeolian （自然短音階と同じ）</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -189,7 +199,7 @@ w: _ └ 半~┘ _ └ 半~┘ _ _
 </div>
 <p>ロクリアン Locrian</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 V:1
@@ -209,23 +219,27 @@ w: └ 半~┘ _ └ 半~┘ _ _ _
 <p>例1：ハ長調</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:C
 C ^C D ^D E F ^F G ^G A "*"_B =B c
+w: C: _ _ _ _ _ _ _ _ vi _ vii _
 </div>
 </div>
 <p>例2：イ長調</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:A
 A, ^A, B, ^B, C D ^D E ^E F "*"=G ^G A
+w: A: _ _ _ _ _ _ _ _ vi _ vii _
 </div>
 </div>
 </aside>
 
 <aside>
-<p>上行形では＃系（次図左）の方が♭系（右）と比べて臨時記号が少なく済む。</p>
+<p>上行形では♯系（次図左）の方が♭系（右）と比べて臨時記号が少なく済む。</p>
 <div class="score">
 L:1
 K:C
@@ -257,17 +271,21 @@ DEF"*"=GABcd
 <p>例1：ハ長調</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:C
 c B _B A _A G "*"^F =F E _E D _D C
+w: C: _ _ _ _ v _ iv _ _ _ _ _
 </div>
 </div>
 <p>例2：変ホ長調</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:Eb
 e d _d c _c B "*"=A _A G _G F _F E
+w: Es: _ _ _ _ v _ iv _ _ _ _ _
 </div>
 </div>
 </aside>
@@ -313,17 +331,23 @@ B"*"=AGFEDCB,
 <p>上行はハ長調と同じ</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:C
 A, "*"_B, =B, C ^C D ^D E F ^F G ^G A
+w: a:~i _ ii _
+w: C:~vi _ vii i
 </div>
 </div>
 <p>下行はイ長調と同じ</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:C
 A ^G =G ^F =F E "*"^D =D ^C =C B, _B, A,
+w: a: _ _ _ _ v _ iv
+w: A: _ _ _ _ v _ iv
 </div>
 </div>
 
@@ -331,24 +355,30 @@ A ^G =G ^F =F E "*"^D =D ^C =C B, _B, A,
 <p>上行はニ長調と同じ</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:Bm
 B, "*"=C ^C D ^D E ^E F G ^G A ^A B
+w: h:~i _ ii _
+w: D:~vi _ vii i
 </div>
 </div>
 <p>下行はロ長調と同じ</p>
 <div class="scroll">
 <div class="score">
+%%vocalfont Verdana 10pt
 L:1
 K:Bm
 B ^A =A ^G =G F "*"^E =E ^D =D C =C B,
+w: h: _ _ _ _ v _ iv
+w: H: _ _ _ _ v _ iv
 </div>
 </div>
 </aside>
 
 <aside>
 <p>以上が旋律半音階の説明である。</p>
-<p>なお、旋律半音階を用いず「上行はすべて＃、下行はすべて♭」あるいは「上行も下行もすべて＃か♭に統一」などとする記法もある。</p>
+<p>なお、旋律半音階を用いず「上行はすべて♯、下行はすべて♭」あるいは「上行も下行もすべて♯か♭に統一」などとする記法もある。</p>
 </aside>
 
 <h2>全音音階</h2>
