--- a/tuning.html
+++ b/tuning.html
@@ -62,8 +62,8 @@ table.temperament td { text-align: center; }
 <aside>
 <p>ピタゴラスコンマ</p>
 <p>ここでは例えば A♭を起点とし、以下の操作により12音を得たとする。<br>
-　　A♭→ E♭→ B♭→ F → C → G → D → A → E → B → F＃→ C＃→ G＃<br>
-このとき最初の A♭と、3/2 倍を12回繰り返した G＃とは一致せず、G＃の方が約23.5セント高い。この A♭ と G＃とのずれをピタゴラスコンマと呼ぶ。このため E♭から G＃までの12音を用いて半音階を構成した場合、G＃と E♭との音程は純正な完全5度よりも約23.5セント狭くなり、ヴォルフ（狼）と呼ばれる顕著なうなりを生じる。</p>
+　　A♭→ E♭→ B♭→ F → C → G → D → A → E → B → F♯→ C♯→ G♯<br>
+このとき最初の A♭と、3/2 倍を12回繰り返した G♯とは一致せず、G♯の方が約23.5セント高い。この A♭ と G♯とのずれをピタゴラスコンマと呼ぶ。このため E♭から G♯までの12音を用いて半音階を構成した場合、G♯と E♭との音程は純正な完全5度よりも約23.5セント狭くなり、ヴォルフ（狼）と呼ばれる顕著なうなりを生じる。</p>
 </aside>
 
 <h2>純正律</h2>
@@ -96,7 +96,7 @@ K:C
 <aside>
 <p>純正律（長音階）の三和音</p>
 <div class="score">
-%%vocalfont Helvetica 11pt
+%%vocalfont Verdana 10pt
 L:1
 K:C
 [CEG] [FAc] [GBd] || "※" [DFA] [EGB] [Ace]
@@ -139,7 +139,7 @@ w: C:~I IV V | II III VI
 <tr><td>平均律とのセント差<td>0.000<td>+11.73<td>+7.820<td>+15.64<td>-13.69<td>-1.955
 </table>
 <table class="fig temperament">
-<tr><td>音名<td>F#<td>G<td>A♭<td>A<td>B♭<td>B
+<tr><td>音名<td>F♯<td>G<td>A♭<td>A<td>B♭<td>B
 <tr><td>比率<td>45/32<td>3/2<td>8/5<td>5/3<td>9/5<td>15/8
 <tr><td>平均律とのセント差<td>-9.776<td>+1.955<td>+13.686<td>-15.641<td>+17.596<td>-11.731
 </table>
@@ -207,7 +207,7 @@ K:C
 
 <aside>
 <p>しかし、12音のピタゴラス音律で生じた問題は中全音律でも解決していない。</p>
-<p>ピタゴラス音律の場合とは逆に、A♭から完全5度を12回積み重ねてできる G＃は A♭より約41セント低い。このずれを含む和音は実用に耐えず、一般に#が3つあるいは♭が2つより多い曲は中全音律では演奏不可能とされる。</p>
+<p>ピタゴラス音律の場合とは逆に、A♭から完全5度を12回積み重ねてできる G♯は A♭より約41セント低い。このずれを含む和音は実用に耐えず、一般に♯が3つあるいは♭が2つより多い曲は中全音律では演奏不可能とされる。</p>
 </aside>
 
 <h2>平均律</h2>
@@ -216,7 +216,7 @@ K:C
 
 <aside>
 <p>平均律とピタゴラス音律</p>
-<p>A♭から完全5度を12回積み重ねてできる G# が元の A♭と一致するよう、12個の完全5度を均等に（1/12ピタゴラスコンマずつ）狭めて調整したものが平均律であると考えることもできる。</p>
+<p>A♭から完全5度を12回積み重ねてできる G♯が元の A♭と一致するよう、12個の完全5度を均等に（1/12ピタゴラスコンマずつ）狭めて調整したものが平均律であると考えることもできる。</p>
 </aside>
 
 <p>平均律による全音階を示す。</p>
