表紙を整備

--- a/index.html
+++ b/index.html
@@ -14,18 +14,31 @@
 
 <h1>音楽理論ノート</h1>
 
-<nav>
-<ol>
-<li><a href="interval.html">音程</a>
-<li><a href="scale.html">音階</a>
-<li><a href="key.html">調</a>
-<li><a href="tuning.html">音律</a>
-<li><a href="chord.html">和音</a>
-<li><a href="harmony.html">和声</a>
-<li><a href="nonchord_tone.html">非和声音</a>
-</ol>
-</nav>
+<aside>
+<p>音楽理論に興味があって調べたことをまとめました。</p>
+<p>楽譜は <a href="https://github.com/paulrosen/abcjs">abcjs</a> で表示しています。</p>
+</aside>
 
-<script>
-renderabc();
-</script>
+<h2>音階と調</h2>
+<p><b><a href="interval.html">音程</a></b> 名称、全音階的音程、協和音程など。</p>
+<p><b><a href="scale.html">音階</a></b> 長音階、短音階、教会旋法、半音階の記法など。</p>
+<p><b><a href="key.html">調</a>　</b> 調号、近親調、転調、調判定の理論など。</p>
+<p><b><a href="tuning.html">音律</a></b> ピタゴラス音律、純正律、中全音律など。理系寄り。</p>
+
+<h2>和音と和声</h2>
+<p><b><a href="chord.html">和音</a></b> 和音の種類、転回、記号など。</p>
+<p><b><a href="harmony.html">和声</a></b> 機能進行、声部、禁則など。</p>
+<p><b><a href="nonchord_tone.html">非和声音</a></b> 経過音、刺繡音など、和音以外の音のいろいろ。</p>
+
+<h2>楽式</h2>
+<p>（未）</p>
+
+<h2>文献</h2>
+<p><a href="https://www.amazon.co.jp/dp/4276100070?tag=hirodaifuzo08-22&linkCode=ure&creative=6339">菊池有恒 (1998)『新版 楽典 ―音楽家を志す人のための』音楽之友社.</a></p>
+<p><a href="http://xn--i6q789c.com/">楽典.com</a></p>
+<p><a href="https://jp.yamaha.com/services/music_pal/study/">音楽について勉強しよう - ヤマハ</a></p>
+<p><a href="http://www.denen.org/">創作田園地帯</a></p>
+<p><a href="http://www.daxter-music.jp/">Daxter Music</a></p>
+<p><a href="http://www.asahi-net.or.jp/~mf4n-nmr/abc_notation.html">実用abc譜</a></p>
+
+<script>s();</script>
