--- a/interval.html
+++ b/interval.html
@@ -4,7 +4,7 @@
 <title>音程</title>
 <link rel="stylesheet" href="style.css">
 <script src="abcjs_basic_4.0.0-min.js"></script>
-<script src="script.js"></script>
+<script src="script.js?2018-04-29"></script>
 
 <nav id="header">
 <ul>
@@ -440,6 +440,4 @@ K:C
 
 
 
-<script>
-s();
-</script>
+<script>s()</script>
