--- a/nonchord_tone.html
+++ b/nonchord_tone.html
@@ -4,7 +4,7 @@
 <title>非和声音</title>
 <link rel="stylesheet" href="style.css">
 <script src="abcjs_basic_4.0.0-min.js"></script>
-<script src="script.js"></script>
+<script src="script.js?2018-04-29"></script>
 
 <nav id="header">
 <ul>
@@ -217,6 +217,4 @@ C, ||
 <p>実例が大事</p>
 </aside>
 
-<script>
-s();
-</script>
+<script>s()</script>
