--- a/scale.html
+++ b/scale.html
@@ -4,7 +4,7 @@
 <title>音階</title>
 <link rel="stylesheet" href="style.css">
 <script src="abcjs_basic_4.0.0-min.js"></script>
-<script src="script.js"></script>
+<script src="script.js?2018-04-29"></script>
 
 <nav id="header">
 <ul>
@@ -393,6 +393,4 @@ C D E ^F ^G ^A c
 
 <h2>民族音階（省略）</h2>
 
-<script>
-s();
-</script>
+<script>s()</script>
