--- a/tuning.html
+++ b/tuning.html
@@ -4,7 +4,7 @@
 <title>音律</title>
 <link rel="stylesheet" href="style.css">
 <script src="abcjs_basic_4.0.0-min.js"></script>
-<script src="script.js"></script>
+<script src="script.js?2018-04-29"></script>
 
 <nav id="header">
 <ul>
@@ -233,6 +233,4 @@ K:C
 <p>平均律の全音は正確に半音の2倍である。</p>
 <p>平均律は完全1度と完全8度を除き純正な音程にならないが、全ての調で均質な響きが得られ、転調や移調を自由に行うことができる。</p>
 
-<script>
-s();
-</script>
+<script>s()</script>
