--- a/chord.html
+++ b/chord.html
@@ -4,7 +4,7 @@
 <title>和音</title>
 <link rel="stylesheet" href="style.css">
 <script src="abcjs_basic_4.0.0-min.js"></script>
-<script src="script.js"></script>
+<script src="script.js?2018-04-29"></script>
 
 <nav id="header">
 <ul>
@@ -565,6 +565,4 @@ K:F#m
 </aside>
 
 
-<script>
-s();
-</script>
+<script>s()</script>
