--- a/harmony.html
+++ b/harmony.html
@@ -4,7 +4,7 @@
 <title>和声</title>
 <link rel="stylesheet" href="style.css">
 <script src="abcjs_basic_4.0.0-min.js"></script>
-<script src="script.js"></script>
+<script src="script.js?2018-04-29"></script>
 
 <nav id="header">
 <ul>
@@ -495,6 +495,4 @@ G, C ||
 </ul>
 
 
-<script>
-s();
-</script>
+<script>s()</script>
