--- a/key.html
+++ b/key.html
@@ -4,7 +4,7 @@
 <title>調</title>
 <link rel="stylesheet" href="style.css">
 <script src="abcjs_basic_4.0.0-min.js"></script>
-<script src="script.js"></script>
+<script src="script.js?2018-04-29"></script>
 
 <nav id="header">
 <ul>
@@ -816,6 +816,4 @@ w: c:~I | IV | V | I |
 
 </aside>
 
-<script>
-s();
-</script>
+<script>s()</script>
