音楽記号Webフォントを用意

--- a/key.html
+++ b/key.html
@@ -750,7 +750,7 @@ c3 ^d e3 c | A3=G F^A Bc ||
 <p>また課題によっては「♯3個の調へ」や「平行調の属調の同主調へ」など、音程でなく調号や調を指定される場合がある。このときは原曲の調判定を行ってから移調する。</p>
 
 <aside>
-<p>たとえば「同主調の平行調へ移調せよ」という課題で a moll の曲を誤って C dur と判定すると、fis moll（＃3つ、長3度下げ）へ移調すべきところ Es dur（♭3つ、長3度上げ）へ移調してしまう。</p>
+<p>たとえば「同主調の平行調へ移調せよ」という課題で a moll の曲を誤って C dur と判定すると、fis moll（♯3つ、長3度下げ）へ移調すべきところ Es dur（♭3つ、長3度上げ）へ移調してしまう。</p>
 </aside>
 
 <h3>移調楽器</h3>
