--- a/tuning.html
+++ b/tuning.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="initial-scale=1.0">
 <title>音律</title>
 <link rel="stylesheet" href="src/style.css">
+<link rel="icon" href="src/favicon.ico">
 <script src="src/abcjs_basic_4.0.0-min.js"></script>
 <script src="src/script.js?2018-04-29"></script>
 
